# anvesh

./: Cargo.toml  Readme.md
anvesh/: config.yaml
backend/: Cargo.toml
backend/src/: aggregator.rs  handler.rs  lib.rs  network.rs
backend/src/engines/: bing.rs  duckduckgo.rs  mod.rs
lib/: Cargo.toml
lib/src/: aggregator.rs  errors.rs  handler.rs  lib.rs  network.rs
lib/src/engines/: bing.rs  duckduckgo.rs  mod.rs
src/: cli.rs  config.rs  main.rs  server.rs  templates.rs
templates/: base.html  search.html
