[package]
name = "anvesh"
version = "0.1.0"
authors = ["Ashwin Vinod <ashwinvinodsa@gmail.com>"]
edition = "2021"
rust-version = "1.72"

[workspace]
members = [
    "lib",
    "."
]

[dependencies]
lib = { path = "lib"}
askama = {version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.4.0"
axum = {version = "0.7.4", features = ["json"]}
tokio = {version = "1.36.0", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.8"
anyhow = { version = "1.0.79", features = ["backtrace"] }
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tracing = "0.1.40"
num_cpus = "1.16.0"
clap = { version = "4.4.18", features = ["derive"] }
serde_json = "1.0.113"
